--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,5 @@ spring.datasource.password=
 
 # JPA
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update  # none, create, create-drop, update, validate 
+# none, create, create-drop, update, validate
+spring.jpa.hibernate.ddl-auto=update
