--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.password=
 
 # JPA
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-# none, create, create-drop, update, validate
+# create-drop, create, update, validate, none
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.show_sql=true
